@@ -10,7 +10,7 @@
 #               2010 Didier Briel, Wildrich Fourie, Martin Fleurke,
 #                    Antonio Vilei, Arno Peters, Alex Buloichik
 #               2011 Didier Briel, Briac Pilpre
-#               2012 Martin Fleurke, Wildrich Fourie, Didier Briel
+#               2012 Martin Fleurke, Wildrich Fourie, Didier Briel, Guido Leenders
 #               Home page: http://www.omegat.org/
 #               Support center: http://groups.yahoo.com/group/OmegaT/
 #
@@ -202,9 +202,13 @@ MW_GOTOMENU=&Go To
 
 TF_MENU_EDIT_NEXT=&Next Segment
 
+TF_MENU_EDIT_NEXT_NOTE=Next N&ote
+
 TF_MENU_EDIT_UNTRANS=Next &Untranslated Segment
 
 TF_MENU_EDIT_PREV=&Previous Segment
+
+TF_MENU_EDIT_PREV_NOTE=Previous No&te
 
 TF_MENU_EDIT_GOTO=&Segment Number...
 
