@@ -10,7 +10,7 @@
 #               2010 Didier Briel, Wildrich Fourie, Martin Fleurke,
 #                    Antonio Vilei, Arno Peters, Alex Buloichik
 #               2011 Didier Briel, Briac Pilpre
-#               2012 Martin Fleurke, Wildrich Fourie, Didier Briel
+#               2012 Martin Fleurke, Wildrich Fourie, Didier Briel, Guido Leenders
 #               Home page: http://www.omegat.org/
 #               Support center: http://groups.yahoo.com/group/OmegaT/
 #
@@ -183,9 +183,13 @@ MW_GOTOMENU=Atte&indre
 
 TF_MENU_EDIT_NEXT=&Segment suivant
 
-TF_MENU_EDIT_UNTRANS=Segment &non traduit suivant
+TF_MENU_EDIT_NEXT_NOTE=Note sui&vante
+
+TF_MENU_EDIT_UNTRANS=Segment non &traduit suivant
 
 TF_MENU_EDIT_PREV=Segment &pr\u00e9c\u00e9dent
+
+TF_MENU_EDIT_PREV_NOTE=Note pr\u00e9c\u00e9&dente
 
 TF_MENU_EDIT_GOTO=Segment &num\u00e9ro...
 
